# AI-on-the-edge-device

code/: partitions.csv  platformio.ini
code/components/jomjol_fileserver_ota/: CMakeLists.txt  server_help.cpp  webui_embedded.h
code/components/jomjol_flowcontroll/: CMakeLists.txt  ClassFlowControll.cpp  ClassFlowControll.h  ClassFlowImage.cpp  ClassFlowImage.h  ClassFlowTakeImage.cpp  MainFlowControl.cpp
code/components/jomjol_helper/: sdcard_check.cpp
code/include/: webui_storage.h
code/main/: CMakeLists.txt  main.cpp  nvs_config.cpp  nvs_config.h  server_main.cpp  version.h  webui_storage.cpp
param-docs/: hidden-in-ui.txt
param-docs/parameter-pages/AutoTimer/: Interval.md  Schedule.md
param-docs/parameter-pages/System/: HtmlStorage.md
param-docs/parameter-pages/TakeImage/: RawImesCircularBuffer.md  RawImesCircularBufferDays.md
sd-card/config/: config.ini
sd-card/html/: edit_config_template.html  readconfigparam.js
